--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -25,6 +25,12 @@
 #   unused-packages = true
 
 
+[metadata.heroku]
+  root-package = "github.com/teimurjan/go-state-exams"
+  go-version = "1.11.1"
+  ensure="true"
+  install=["./cmd/..."]
+
 [[constraint]]
   name = "github.com/go-telegram-bot-api/telegram-bot-api"
   version = "4.6.4"
